--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,19 @@
 /* ================================= 
   Base Element Styles
 ==================================== */
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 * {
 	box-sizing: border-box;
 }
 
-
-
 body {
-	font-family: 'Crimson Pro', sans-serif;
-	line-height: 1.6;
-	color: #3a3a3a;
-	
-}
-
-p {
-	font-size: .95em;
-	margin-bottom: 1.8em;
-}
-
-h2,
-h3,
-a {
-	color: #069c38;
-}
-
-h2,
-h3,
-h4 {
-	margin-top: 0;
-}
-
-h4 {
-	margin-bottom: .4em;
-}
-
-a {
-	text-decoration: none;
-}
-
-img {
-	max-width: 100%;
-	
-}
-
-figure {
-	margin: 0;
-	line-height: 0;
-  	position: relative;
-}
-
-figcaption {
-	font-size: .9em;
+	font-size: 16px;
 	line-height: 1.5;
-	color: #fff;
-	padding: .9em;	
-	background: rgba(19,43,102, .85);
-	border-bottom-left-radius: 19px;
-	border-bottom-right-radius: 19px;
-  	position: absolute;
-  	bottom: 0;
-	width: 100%;
-	opacity: 0;
-  
 }
 
-figcaption:hover {
-	opacity: .85;
-}
 
 
 /* ================================= 
@@ -76,137 +21,146 @@ figcaption:hover {
 ==================================== */
 
 /* ---- Navigation ---- */
-
-.name {
-	font-size: 1.3em;
-	margin: 0;
+.main-header {
+	padding-top: 2em;
+	text-align: center;
+	margin-bottom: 10%;
+	color:#3e3f3f;
 	
 }
 
-.main-nav {
-	margin-top: 5px;
+.main-header, 
+.nav {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	color:#3e3f3f;
+	font-family: "Open Sans", sans-serif;
 }
 
-	.name a,
-	.main-nav a {
-		display: block;
-		text-align: center;
-		padding: 10px 15px;
-			
-	}
-	
-	.main-nav a {
-		font-size: .95em;
-		color: #1624eb;
-		text-transform: uppercase;
-		
-	}
+.nav {
+	text-transform: uppercase;
+}
 
-	.main-nav a:hover {
-		color: #16b163;
-	}
+.nav a {
+	display: block;
+	color: #3e3f3f;
+	font-size: 1.125em;
+	font-weight: 700;
+	padding: 2%;
+	margin: 2%;
+}
+
+.main-footer {
+	display: flex;
+	justify-content: space-around;
+	border-top: 1px solid #d6dee9;
+	margin-left: 20px;
+	margin-right: 20px; 
+	padding-bottom: 25px;
+	font-family: "Open Sans", sans-serif;
+	text-transform: uppercase;
+	font-size: 12px;
+}
+
+.footnav,
+.navbar,
+.name
+ {
+	display: none;
+}
 
 /* ---- Layout Containers ---- */
-
-.main-header {
-	padding-top: .5em;
-	padding-bottom: .5em;
-	background: linear-gradient(0deg, #3fcef1, transparent);
-}
-
-
-
-.banner,
-.main-footer {
+.card {
+	font-weight: 100;
 	text-align: center;
-}
-
-.banner {
-	padding: 3.2em 0;
-	margin-bottom: 60px;
-	background: linear-gradient(#3fcef1, transparent 80%), 
-				linear-gradient(0deg, #fff, transparent),
-				#3fcef1 url("../img/oasisbanner.jpg") no-repeat top;
-	background-size: cover;
+	display: block;
+	margin: 3px;
+	padding: 2px;
+	padding-bottom: 40px;
+	color:  #797383;
+	font-family: 'Roboto', sans-serif; 
 	
 }
 
-.col {
-	padding-right: 1em;
-	padding-left: 1em;
-	padding-bottom: 4em;
+.card img {
+	max-width: 100%;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
-.main-footer {
-	background: #d9e4ea;
-	padding: 2em 0;
-	margin-top: 30px;
+.card h2 {
+	font-family: "Open-Sans", sans-serif;
+	font-weight: lighter;
+	color: #3e3f3f;
 }
+
+.card h3 {
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+#banner {
+	margin-bottom: 10%;
+}
+
+#banner img {
+	width: 80%;
+}
+
+#port {
+	margin-bottom: 30px;
+}
+
+#port a:hover {
+	color:#3e3f3f;
+}
+
+#contact {
+	padding-bottom: 25px;
+}
+
+#contact h3 {
+	font-family: "Open Sans", sans-serif;
+	text-transform: uppercase;
+}
+
+#contact p {
+	text-transform: none;
+	font-weight: bold;
+	margin-left: 15%;
+	margin-right: 15%;
+}
+
+#contact a {
+	font-family:"Concert One", sans-serif;
+	font-weight: 400;
+	color:#6b6d6d;
+	
+}
+
+#music img {
+	max-height: 70%;
+	max-width: 70%;
+}
+
+
 
 /* ---- Page Elements ---- */
 
-.logo {
-	width: 150px;
-	border: 10px double rgba(253, 228, 3, 0.377);
-	border-radius: 50%;
-	transition: all .2s;
+a {
+	text-decoration: none;
+	color:#3e3f3f;
 }
 
-.logo:hover {
-	transform: scale(1.3);
-
+a:hover {
+	color: rgb(34, 119, 17);
 }
 
-.headline {
-	margin-top: 0;
-	margin-bottom: 0;
-	text-shadow: 1px 1px rgb(10, 0, 0);
-}
+.t-border {
+	border-top: 2px solid #dfe2e6;
 
-.icon-location {
-  width: 50%;
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  z-index: 2;
-}
-
-.feat-img {
-	border-radius: 5%;
-}
-
-.feat-img2 {
-	width: 100%;
-	border-radius: 5%;
-}
-
-
-
-.instprofile {
-	text-align: center;
-	line-height: 2px;
-	transition: all .1s;
-		
-}
-
-.instprofile, p {
-	padding-bottom: 0;
-	
-	
-}
-
-.instprofile img {
-	width: 20%;
-	border-radius: 50%;
-	margin-bottom: 2rem;
-	
-}
-
-.instprofile:hover {
-	transform: scale(1.1);
-
-}
-
+  }
 
 
 /* ================================= 
@@ -215,59 +169,95 @@ figcaption:hover {
 
 @media (min-width: 768px) {
 
-  body {
-    padding-top: 68px;
-  }
-
-  .main-header {
-    position: fixed;
-    background: linear-gradient(0deg, #3fcef1, transparent);
-    box-shadow: 0 1px 4px rgba(0,0,0,.1);
-    width: 100%;
-    top: 0;
-    z-index: 1000;
-  }
-
+	body {
+		padding-top: 68px;
+		
+	}
+	
 	.container {
-		width: 90%;
-		margin: 0 auto;
-	}
-
-	.name,
-	.col {
-		float: left;
+		max-width: 100%;
+		padding-left: 5%;
+		padding-right:5%;
 		
 	}
-
-	.primary,
-	.secondary {
-		width: 50%;
+	
+	  .main-header, 
+	  .nav {
+		text-align: center;
+		display: flex;
+		justify-content: space-evenly;
 	}
 
-	.rep {
-		width: 75%;
-		padding-left: 25%;
+	.nav {
+		flex-direction: row;
+		padding: 0 20%;
 		
-
+	}
+	
+	.footnav {
+		display: block;
+		width: 95%;
+		text-align: center;
+		min-height: 30px;
+		/*border-top: 1px solid #d6dee9;*/
+		margin-left: 20px;
+		margin-right: 20px;
+		padding-bottom: 3%;
 	}
 
-	.tertiary {
+	.navbar {
+		display: flex;
+		justify-content: space-between;
+		list-style-type: none;
+		color:#3e3f3f;
+		font-family: "Open Sans", sans-serif;
+		text-transform: Uppercase;
+	}
+
+	.name {
+		display: block;
+		margin-right: auto;
+	}
+
+	.navbar li {
+		padding: 5px 10px 10px 10px;
+	  }
+	
+	.container {
 		display: inline-block;
-		padding-top: 50px;
 	}
 
-	.main-nav {
+	.col {
+		max-width: 49%;
+	}
+	
+	.primary {
+		float: left;
+	}
+	
+	.secondary {
 		float: right;
 	}
-
-	.main-nav li {
-		display: inline-block;
-		margin-left: 15px;
+	
+	#banner h3 {
+		max-width: 45%;
+		text-align: left;
+		padding-left: 0;
+		margin-left: 5%;
 	}
 
-	.tagline {
-		font-size: 1.4em;
+	#banner img {
+		max-width: 35%;
+		margin-right: 5%;
+	}
 
+	#contact {
+		padding: 0 12% 5%;
+	}
+
+	#footer {
+		display: none;
+		
 	}
 
 	/* ---- Float clearfix ---- */
@@ -282,31 +272,109 @@ figcaption:hover {
 
 @media (min-width: 1024px) {
 
-	
-	.container {
-		width: 80%;
-		max-width: 1150px;
-	}
 
-	.banner {
-		padding-bottom: 160px;
-	}
-
-	.primary {
-		width: 40%;
-	}
-
-	.secondary {
-		width: 30%;
-	} 
-	.rep {
-		padding: 0;
+	body {
+		padding-top: 68px;
 		
-
+	}
+	  
+	.main-header {
+		width: 100%;
+		min-height: 50px;
+		display: flex;
+		flex-direction: row;
+		margin-bottom: 2%;
+		padding-top: 0%;
 	}
 
-	.tertiary {
-		display: inline-block;
-		padding-top: 50px;
+	.nav {
+		padding: 0 15%;
 	}
+
+	.nav li {
+		padding: 0px 20px 10px 20px;
+		justify-content: space-around;
+		margin-left: auto;
+		
+	}
+
+	.main-header h1 {
+		margin-top: 0;
+		margin-right: auto;
+		margin-left: 14%;
+	}
+
+	.container {
+		max-width: 100%;
+		padding-left: 5%;
+		padding-right:5%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	
+	
+	
+	
+	.footnav {
+		display: block;
+		width: 75%;
+		text-align: center;
+		min-height: 30px;
+		/*border-top: 1px solid #d6dee9;*/
+		margin-left: 12%;
+		margin-right: 20px;
+		padding-bottom: 3%;
+		justify-content: center;
+	}
+
+	
+
+	
+
+	.navbar li {
+		padding: 5px 10px 10px 10px;
+	  }
+	
+	.t-border {
+	border-top: 2px solid #dfe2e6;
+	
+  }
+
+	.col {
+		max-width: 29%;
+	}
+
+	#port {
+		text-align: center;
+		margin: 0;
+	}
+
+	#banner {
+		margin: 0 10% 0 10%;
+	}
+	
+	#banner h3 {
+		max-width: 45%;
+		text-align: left;
+		padding-left: 0;
+		margin-left: 5%;
+	}
+
+	#banner img {
+		max-width: 35%;
+		margin-right: 5%;
+	}
+
+	#contact {
+		padding: 0 12% 5%;
+		margin: 0 10% 0 10%;
+	}
+
+	#footer {
+		display: none;
+		
+	}
+	
+
 }
